--- a/templates/account.html
+++ b/templates/account.html
@@ -38,7 +38,23 @@
             </div>
         </div>
         <div>
-            <div class="flex flex-wrap">
+            <div class="flex justify-center flex-wrap content">
+                {% for recipe in your_recipes %}
+                <div class="bg-[#D61C4E] recipe-card shadow w-1/4 min-w-[80px] m-8 rounded-2xl">
+                    {% if loop.index <= images|length %} <img src="data:image/jpeg;base64,{{ images[loop.index-1] }}" alt="--"
+                        class="w-full h-40 rounded-t-2xl">
+                        {% endif %}
+                        <div class="text-white p-2 font-serif text-xs">
+                            <p class="text-xl">{{ recipe.recipe_name.capitalize() }}</p>
+                            <p>malzemeler: {{ recipe.ingredients }}</p>
+                            <p>yorumlar: {{ recipe.comments }}</p>
+                            <p>by: {{ recipe.username }}</p>
+                        </div>
+                </div>
+                {% endfor %}
+            
+            </div>
+            <!-- <div class="flex flex-wrap">
                 {% for recipe in your_recipes %}
                 <div class="bg-[#f2d67e] recipe-card  shadow w-1/4 m-4 rounded p-2">
                     {% if loop.index <= images|length %} <img src="data:image/jpeg;base64,{{ images[loop.index-1] }}" alt="--"
@@ -49,7 +65,7 @@
                         <p>comments: {{ recipe.comments }}</p>
                 </div>
                 {% endfor %}
-            </div>
+            </div> -->
         </div>
     </main>
 </div>
