--- a/templates/delete_recipe.html
+++ b/templates/delete_recipe.html
@@ -26,7 +26,7 @@
             <li class="mr-2"><a href="/logout">Çıkış yap</a></li>
         </ul>
     </header>
-    <main class="border w-3/4 mx-auto bg-[#FAC213] rounded">
+    <main class="border w-3/4 mx-auto bg-[#FAC213] rounded mt-24">
         <div class="flex justify-center w-3/4 mx-auto my-4">
             <form action="{{url_for('delete_recipe')}}" method="POST">
                 <input type="text" name="query" placeholder="Hangi tarif?" class="border px-4 py-2 rounded">
