--- a/templates/account.html
+++ b/templates/account.html
@@ -12,29 +12,22 @@
 {% block link5 %}
 {% endblock %}
 
+{% block header %}
+<li class="mr-2"><a href="/logout" class="hover:no-underline hover:text-slate-400">Çıkış yap</a></li>
+{% endblock %}
 {% block content %}
-
 <div>
-    <header class="bg-[#D61C4E] text-white flex items-center justify-between align-middle text-xl">
-        <div class="flex">
-            <img src="../static//own_recipe.png" alt="own_recipe" class="w-10 ml-4" />
-            <h1><a href="/" class="hover:text-white hover:no-underline mx-4">Senin Tarifin</a></h1>
-        </div>
-        <ul class="flex mx-4">
-            <li class="mr-2"><a href="/logout">Çıkış yap</a></li>
-        </ul>
-    </header>
     <div class="flex justify-center w-3/4 mx-auto my-4">
         <input type="text" placeholder="bugun ne yemek istersin?" id="search_value" class="border px-4 rounded">
         <button class="btn text-white bg-[#D61C4E] w-32 mx-4" id="search_button">Ara</button>
     </div>
     <main class="bg-[#FAC213] w-3/4 mx-auto h-2/3 p-4">
         <div class="flex h-12 mb-12 justify-between">
-            <h2 class="mx-20 text-2xl">Senin Tariflerin</h2>
+            <h2 class="mx-20 text-2xl text-light">Senin Tariflerin</h2>
             <div class="flex">
-                <button class="btn text-white bg-[#D61C4E] w-24 m-2"><a href="/add_recipe">Tarif ekle</a></button>
-                <button class="btn text-white bg-[#D61C4E] w-24 m-2"><a href="/delete_recipe">Tarifini Sil</a></button>
-                <button class="btn text-white bg-[#D61C4E] w-32 m-2"><a href="/update_recipe">Tarif düzenle</a></button>
+                <button class="btn text-light bg-[#D61C4E] w-24 m-2"><a href="/add_recipe">Tarif ekle</a></button>
+                <button class="btn text-light bg-[#D61C4E] w-24 m-2"><a href="/delete_recipe">Tarifini Sil</a></button>
+                <button class="btn text-light bg-[#D61C4E] w-32 m-2"><a href="/update_recipe">Tarif düzenle</a></button>
             </div>
         </div>
         <div>
@@ -52,20 +45,7 @@
                         </div>
                 </div>
                 {% endfor %}
-            
             </div>
-            <!-- <div class="flex flex-wrap">
-                {% for recipe in your_recipes %}
-                <div class="bg-[#f2d67e] recipe-card  shadow w-1/4 m-4 rounded p-2">
-                    {% if loop.index <= images|length %} <img src="data:image/jpeg;base64,{{ images[loop.index-1] }}" alt="--"
-                        class="w-full h-40 rounded">
-                        {% endif %}
-                        <p>{{ recipe.recipe_name }}</p>
-                        <p>ingredients: {{ recipe.ingredients }}</p>
-                        <p>comments: {{ recipe.comments }}</p>
-                </div>
-                {% endfor %}
-            </div> -->
         </div>
     </main>
 </div>
