--- a/templates/delete_recipe.html
+++ b/templates/delete_recipe.html
@@ -10,22 +10,12 @@
 {% endblock %}
 {% block link5 %}
 {% endblock %}
-
+{% block header %}
+<li class="mr-4"><a href="/account">Hesabın</a></li>
+<li class="mr-2"><a href="/logout">Çıkış yap</a></li>
+{% endblock %}
 {% block content %}
-<!--   -->
 <div>
-    <header class="bg-[#D61C4E] text-white flex items-center justify-between align-middle text-xl">
-        <div class="flex">
-            <img src="../static//own_recipe.png" alt="own_recipe" class="w-10 ml-4" />
-            <h1><a href="/" class="hover:text-white hover:no-underline mx-4">Senin Tarifin</a></h1>
-        </div>
-        <ul class="flex mx-4">
-            <!-- <li class="mr-4 hover:no-underline no-underline hover:text-white"><a href="/add_recipe">Add Recipe</a></li> -->
-            <!-- <li class="mr-4"><a href="/sign_up">Sign Up</a></li> -->
-            <li class="mr-4"><a href="/account">Hesabın</a></li>
-            <li class="mr-2"><a href="/logout">Çıkış yap</a></li>
-        </ul>
-    </header>
     <main class="border w-3/4 mx-auto bg-[#FAC213] rounded mt-24">
         <div class="flex justify-center w-3/4 mx-auto my-4">
             <form action="{{url_for('delete_recipe')}}" method="POST">
